Test and fix TLS server, authentication and ACLs
