# internal/api/api.gen.go
@@ -1,9 +1,9 @@
 //go:build go1.22
 
-// Package pductl provides primitives to interact with the openapi HTTP API.
+// Package api provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.3.0 DO NOT EDIT.
-package pductl
+package api
 
 import (
 	"bytes"
@@ -754,6 +754,7 @@ type ClearMaximumCurrentsResponse struct {
 	HTTPResponse *http.Response
 	JSON400      *BadRequest
 	JSON401      *Unauthorized
+	JSON403      *Forbidden
 	JSON500      *InternalServerError
 }
 
@@ -883,6 +884,7 @@ type StatusResponse struct {
 	HTTPResponse *http.Response
 	JSON200      *Status
 	JSON401      *Unauthorized
+	JSON403      *Forbidden
 	JSON500      *InternalServerError
 }
 
@@ -907,6 +909,7 @@ type StatusOutletAllResponse struct {
 	HTTPResponse *http.Response
 	JSON200      *[]OutletStatus
 	JSON401      *Unauthorized
+	JSON403      *Forbidden
 	JSON500      *InternalServerError
 }
 
@@ -934,6 +937,7 @@ type TemperatureResponse struct {
 		Temperature float32 `json:"temperature"`
 	}
 	JSON401 *Unauthorized
+	JSON403 *Forbidden
 	JSON500 *InternalServerError
 }
 
@@ -961,6 +965,7 @@ type WhoAmIResponse struct {
 		Username string `json:"username"`
 	}
 	JSON401 *Unauthorized
+	JSON403 *Forbidden
 	JSON500 *InternalServerError
 }
 
@@ -1104,6 +1109,13 @@ func ParseClearMaximumCurrentsResponse(rsp *http.Response) (*ClearMaximumCurrent
 			return nil, err
 		}
 		response.JSON401 = &dest
+
+	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 403:
+		var dest Forbidden
+		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
+			return nil, err
+		}
+		response.JSON403 = &dest
 
 	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 500:
 		var dest InternalServerError
@@ -1368,6 +1380,13 @@ func ParseStatusResponse(rsp *http.Response) (*StatusResponse, error) {
 		}
 		response.JSON401 = &dest
 
+	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 403:
+		var dest Forbidden
+		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
+			return nil, err
+		}
+		response.JSON403 = &dest
+
 	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 500:
 		var dest InternalServerError
 		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
@@ -1407,6 +1426,13 @@ func ParseStatusOutletAllResponse(rsp *http.Response) (*StatusOutletAllResponse,
 			return nil, err
 		}
 		response.JSON401 = &dest
+
+	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 403:
+		var dest Forbidden
+		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
+			return nil, err
+		}
+		response.JSON403 = &dest
 
 	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 500:
 		var dest InternalServerError
@@ -1451,6 +1477,13 @@ func ParseTemperatureResponse(rsp *http.Response) (*TemperatureResponse, error) 
 		}
 		response.JSON401 = &dest
 
+	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 403:
+		var dest Forbidden
+		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
+			return nil, err
+		}
+		response.JSON403 = &dest
+
 	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 500:
 		var dest InternalServerError
 		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
@@ -1493,6 +1526,13 @@ func ParseWhoAmIResponse(rsp *http.Response) (*WhoAmIResponse, error) {
 			return nil, err
 		}
 		response.JSON401 = &dest
+
+	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 403:
+		var dest Forbidden
+		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
+			return nil, err
+		}
+		response.JSON403 = &dest
 
 	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 500:
 		var dest InternalServerError
@@ -1897,6 +1937,15 @@ func (response ClearMaximumCurrents401JSONResponse) VisitClearMaximumCurrentsRes
 	return json.NewEncoder(w).Encode(response)
 }
 
+type ClearMaximumCurrents403JSONResponse struct{ ForbiddenJSONResponse }
+
+func (response ClearMaximumCurrents403JSONResponse) VisitClearMaximumCurrentsResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type ClearMaximumCurrents500JSONResponse struct {
 	InternalServerErrorJSONResponse
 }
@@ -2185,6 +2234,15 @@ func (response Status401JSONResponse) VisitStatusResponse(w http.ResponseWriter)
 	return json.NewEncoder(w).Encode(response)
 }
 
+type Status403JSONResponse struct{ ForbiddenJSONResponse }
+
+func (response Status403JSONResponse) VisitStatusResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type Status500JSONResponse struct {
 	InternalServerErrorJSONResponse
 }
@@ -2217,6 +2275,15 @@ type StatusOutletAll401JSONResponse struct{ UnauthorizedJSONResponse }
 func (response StatusOutletAll401JSONResponse) VisitStatusOutletAllResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type StatusOutletAll403JSONResponse struct{ ForbiddenJSONResponse }
+
+func (response StatusOutletAll403JSONResponse) VisitStatusOutletAllResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -2260,6 +2327,15 @@ func (response Temperature401JSONResponse) VisitTemperatureResponse(w http.Respo
 	return json.NewEncoder(w).Encode(response)
 }
 
+type Temperature403JSONResponse struct{ ForbiddenJSONResponse }
+
+func (response Temperature403JSONResponse) VisitTemperatureResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type Temperature500JSONResponse struct {
 	InternalServerErrorJSONResponse
 }
@@ -2295,6 +2371,15 @@ type WhoAmI401JSONResponse struct{ UnauthorizedJSONResponse }
 func (response WhoAmI401JSONResponse) VisitWhoAmIResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type WhoAmI403JSONResponse struct{ ForbiddenJSONResponse }
+
+func (response WhoAmI403JSONResponse) VisitWhoAmIResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
